Qr signin functionality fixed
1) WebSocket auth works correctly with validation
2) Create qr verification works correctly with validation
3) Qr signin get request details works correctly with validation
4) Qr signin confirm works correctly with validation
5) Change login works correctly with validation
6) Change password works correctly with validation

--- a/src/IdentityPrvd.WebApi/wwwroot/index.html
+++ b/src/IdentityPrvd.WebApi/wwwroot/index.html
@@ -162,7 +162,7 @@
 
             // 3) Відкриваємо WebSocket
             const proto = location.protocol === 'https:' ? 'wss' : 'ws';
-            const ws = new WebSocket(`wss://localhost:7030/auth?verificationId=${data.verificationId}`);
+            const ws = new WebSocket(`wss://localhost:7030/auth/qr?verificationId=${data.verificationId}`);
 
             // 4) По повідомленню — зберігаємо токен, закриваємо WS, показуємо токен на сторінці
             ws.onmessage = evt => {
